@@ -74,6 +74,8 @@ Changes in beta release 2.4.1 (not released yet)
 * Fixed a problem with maximizing windows with the vieport not starting
   on a page boundary.
 
+* Fixed handling of parentheses in FvwmButtons button actions.
+
 _+_A NAME="2.4.0"_-_
 Changes in stable release 2.4.0 (1-Jul-2001)
 _+_/A_-_
